--- a/playground/apps/my-app/.eslintrc.json
+++ b/playground/apps/my-app/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "jan",
+            "prefix": "playground",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "jan",
+            "prefix": "playground",
             "style": "kebab-case"
           }
         ]
