--- a/playground/.prettierrc
+++ b/playground/.prettierrc
@@ -1,3 +1,7 @@
 {
-  "singleQuote": true
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "useTabs": false,
+    "singleQuote": true,
+    "printWidth": 130
 }
