--- a/playground/package.json
+++ b/playground/package.json
@@ -58,6 +58,7 @@
         "eslint-plugin-cypress": "^2.10.3",
         "jest": "27.2.3",
         "jest-preset-angular": "11.1.1",
+        "ng-mocks": "^13.1.1",
         "prettier": "^2.5.1",
         "ts-jest": "27.0.5",
         "typescript": "~4.5.2"
