--- a/playground/apps/my-app/project.json
+++ b/playground/apps/my-app/project.json
@@ -13,10 +13,14 @@
         "main": "apps/my-app/src/main.ts",
         "polyfills": "apps/my-app/src/polyfills.ts",
         "tsConfig": "apps/my-app/tsconfig.app.json",
-        "inlineStyleLanguage": "less",
+        "inlineStyleLanguage": "scss",
         "assets": ["apps/my-app/src/favicon.ico", "apps/my-app/src/assets"],
-        "styles": ["apps/my-app/src/styles.less"],
-        "scripts": []
+        "styles": [
+            "apps/my-app/src/styles.scss"
+        ],
+        "scripts": [
+            "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+      ]
       },
       "configurations": {
         "production": {
