--- a/playground/package.json
+++ b/playground/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@nrwl/angular": "13.8.8",
+    "angular-in-memory-web-api": "^0.13.0",
     "bootstrap": "^5.1.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
